--- a/T-Shop.Application/T-Shop.Application.csproj
+++ b/T-Shop.Application/T-Shop.Application.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\T-Shop.Domain\T-Shop.Domain.csproj" />
+    <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
