--- a/T-Shop/appsettings.json
+++ b/T-Shop/appsettings.json
@@ -8,6 +8,12 @@
   "ConnectionStrings": {
     "postgreSqlConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=200349761;TrustServerCertificate=true"
   },
+  "JwtSettings": {
+    "validIssuer": "T-Shop-API",
+    "validAudience": "https://localhost:5001",
+    "secret": "T-SHOP",
+    "expires":  "24"
+  },
 
   "AllowedHosts": "*"
 }
