--- a/T-Shop/appsettings.json
+++ b/T-Shop/appsettings.json
@@ -11,7 +11,7 @@
   "JwtSettings": {
     "validIssuer": "T-Shop-API",
     "validAudience": "https://localhost:5001",
-    "secret": "T-SHOP",
+    "secret": "THIS-IS-T-SHOP-SECRET-JWT-KEY-FOR-IDENTITY",
     "expires":  "24"
   },
 
