init db + validate, fix bug TypeAPI

--- a/T-Shop.Application/T-Shop.Application.csproj
+++ b/T-Shop.Application/T-Shop.Application.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Brand\Command\" />
+    <Folder Include="Features\Brand\Queries\" />
+  </ItemGroup>
+
 </Project>
