implement cloudinary service, image service

--- a/T-Shop/appsettings.json
+++ b/T-Shop/appsettings.json
@@ -12,8 +12,15 @@
     "validIssuer": "T-Shop-API",
     "validAudience": "https://localhost:5001",
     "secret": "THIS-IS-T-SHOP-SECRET-JWT-KEY-FOR-IDENTITY",
-    "expires":  "24"
+    "expires": "24"
   },
+
+  "CloudinarySettings": {
+    "CloudName": "do06xdvhs",
+    "ApiKey": "616987261474238",
+    "ApiSecret": "ci3k3u1ZWaM_8z-COvtLrRE5bwA"
+  },
+
 
   "AllowedHosts": "*"
 }
