implement Cloudinary service

--- a/T-Shop/appsettings.json
+++ b/T-Shop/appsettings.json
@@ -18,9 +18,10 @@
   "CloudinarySettings": {
     "CloudName": "do06xdvhs",
     "ApiKey": "616987261474238",
-    "ApiSecret": "ci3k3u1ZWaM_8z-COvtLrRE5bwA"
+    "ApiSecret": "ci3k3u1ZWaM_8z-COvtLrRE5bwA",
+    "UrlBase": "https://res.cloudinary.com/${CloudName}/image/upload/",
+    "Folder": "Nashtech_Project"
   },
-
 
   "AllowedHosts": "*"
 }
