--- a/T-Shop/T_Shop.WebAPI.csproj
+++ b/T-Shop/T_Shop.WebAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\T-Shop.Application\T-Shop.Application.csproj" />
     <ProjectReference Include="..\T-Shop.Infrastructure\T-Shop.Infrastructure.csproj" />
+    <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
