--- a/T-Shop.Application/T-Shop.Application.csproj
+++ b/T-Shop.Application/T-Shop.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Cart\Queries\GetCartById\" />
+  </ItemGroup>
+
 </Project>
