--- a/T-Shop.Infrastructure/T-Shop.Infrastructure.csproj
+++ b/T-Shop.Infrastructure/T-Shop.Infrastructure.csproj
@@ -24,10 +24,12 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="Stripe.net" Version="44.8.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\T-Shop.Application\T-Shop.Application.csproj" />
+    <ProjectReference Include="..\T-Shop.Domain\T-Shop.Domain.csproj" />
+    <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
 </Project>
