--- a/T-Shop.Infrastructure/T-Shop.Infrastructure.csproj
+++ b/T-Shop.Infrastructure/T-Shop.Infrastructure.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\Migrations\" />
+  </ItemGroup>
+
 </Project>
