init product service and setup init basic service

--- a/T-Shop.Shared/T-Shop.Shared.csproj
+++ b/T-Shop.Shared/T-Shop.Shared.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\HomePage\" />
+    <Folder Include="ViewModels\CartPage\" />
+    <Folder Include="ViewModels\CheckoutPage\" />
+  </ItemGroup>
+
 </Project>
