--- a/T-Shop.Client.MVC/appsettings.json
+++ b/T-Shop.Client.MVC/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "JwtSettings": {
+    "validIssuer": "T-Shop-API",
+    "validAudience": "https://localhost:5001",
+    "secret": "THIS-IS-T-SHOP-SECRET-JWT-KEY-FOR-IDENTITY",
+    "expires": "24"
+  },
+
   "AllowedHosts": "*"
 }
