fix bug, add apiConnectionString to appsetting

--- a/T-Shop.Client.MVC/appsettings.json
+++ b/T-Shop.Client.MVC/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
+  "ApiConnectionString": "https://localhost:5001/",
   "JwtSettings": {
     "validIssuer": "T-Shop-API",
     "validAudience": "https://localhost:5001",
