handle payment, order

--- a/T-Shop.Client.MVC/T-Shop.WebClient.MVC.csproj
+++ b/T-Shop.Client.MVC/T-Shop.WebClient.MVC.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+    <PackageReference Include="Stripe.net" Version="44.9.0" />
   </ItemGroup>
 
   <ItemGroup>
