--- a/T-Shop.Domain/T-Shop.Domain.csproj
+++ b/T-Shop.Domain/T-Shop.Domain.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
