add api getTransactionOfUser, and modify folder Command transaction

--- a/T-Shop.Application/T-Shop.Application.csproj
+++ b/T-Shop.Application/T-Shop.Application.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Cart\Queries\GetCartById\" />
+    <Folder Include="Features\Order\Queries\" />
   </ItemGroup>
 
 </Project>
