--- a/T-Shop.Shared/T-Shop.Shared.csproj
+++ b/T-Shop.Shared/T-Shop.Shared.csproj
@@ -8,12 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModels\CheckoutPage\**" />
+    <Compile Remove="ViewModels\HomePage\**" />
+    <EmbeddedResource Remove="ViewModels\CheckoutPage\**" />
+    <EmbeddedResource Remove="ViewModels\HomePage\**" />
+    <None Remove="ViewModels\CheckoutPage\**" />
+    <None Remove="ViewModels\HomePage\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ViewModels\HomePage\" />
-    <Folder Include="ViewModels\CheckoutPage\" />
+    <Folder Include="ViewModels\NewFolder\" />
   </ItemGroup>
 
 </Project>
