--- a/T-Shop.Client.MVC/T-Shop.WebClient.MVC.csproj
+++ b/T-Shop.Client.MVC/T-Shop.WebClient.MVC.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\T-Shop.Shared\T-Shop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\NewFolder\" />
+  </ItemGroup>
+
 </Project>
