getProductsQueryHandler unit test

--- a/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
+++ b/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
@@ -11,20 +11,27 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\T-Shop.Application\T-Shop.Application.csproj" />
     <ProjectReference Include="..\T-Shop.Domain.XUnitTest\T-Shop.Domain.XUnitTest.csproj" />
-    <ProjectReference Include="..\T-Shop.Infrastructure\T-Shop.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Handler\Products\Create\" />
+    <Folder Include="Handler\Products\GetById\" />
   </ItemGroup>
 
 </Project>
