--- a/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
+++ b/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
@@ -30,8 +30,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Handler\Brands\" />
     <Folder Include="Handler\Products\Create\" />
-    <Folder Include="Handler\Products\GetById\" />
   </ItemGroup>
 
 </Project>
