Product: unit test for GetProducts, GetProductByIdByIdQueryHandler

--- a/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
+++ b/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
@@ -30,8 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Handler\Brands\" />
-    <Folder Include="Handler\Products\Create\" />
+    <Folder Include="Handler\Product\Create\" />
   </ItemGroup>
 
 </Project>
