--- a/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
+++ b/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
@@ -11,6 +11,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Handler\Product\Create\**" />
+    <EmbeddedResource Remove="Handler\Product\Create\**" />
+    <None Remove="Handler\Product\Create\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
@@ -30,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Handler\Product\Create\" />
+    <Folder Include="Handler\Transaction\Queries\GetTransactionById\" />
   </ItemGroup>
 
 </Project>
