--- a/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
+++ b/T-Shop.Application.XUnitTest/T-Shop.Application.XUnitTest.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+	  <PackageReference Include="ReportGenerator" Version="5.3.6" />
   </ItemGroup>
 
   <ItemGroup>
